don't handle summary data

--- a/index.Rmd
+++ b/index.Rmd
@@ -60,16 +60,16 @@ By using cancer incidence data from Estonian Cancer Registry we want to understa
 > However, when doing data analysis 80% of time will be spent on data munging where you also become familiar with your dataset. So it's time well spent.
 
 
-## Cancer incidence data from Estonian cancer registry
-Estonian cancer registry data is available via [Health statistics and health research database]( http://pxweb.tai.ee/PXWeb2015/pxweb/en/02Haigestumus/02Haigestumus__04Pahaloomulised%20kasvajad/?tablelist=true&rxid=279523e2-1ea1-4a02-920b-f85bb19a908d).
-We are using cancer incidence dataset from table "PK30: Age-specific incidence rate of malignant neoplasms per 100 000 inhabitants by site and sex".
+## Cancer data from Estonian cancer registry
+Estonian cancer registry data is available via [Health statistics and health research database](http://pxweb.tai.ee/PXWeb2015/pxweb/en/02Haigestumus/02Haigestumus__04Pahaloomulised%20kasvajad/?tablelist=true&rxid=279523e2-1ea1-4a02-920b-f85bb19a908d).
+We are using cancer incidence dataset from table "PK10: New cases of malignant neoplasms by specified site, sex and age group".
 
-Detailed information about variables in this dataset can be found from [here](http://pxweb.tai.ee/PXWeb2015/pxweb/en/02Haigestumus/02Haigestumus__04Pahaloomulised%20kasvajad/PK30.px/?rxid=3155fc9b-3ab1-40b0-9e70-beadfb6af83c).
+Detailed information about variables in this dataset can be found from [here](http://pxweb.tai.ee/PXWeb2015/Resources/PX/Databases/02Haigestumus/04Pahaloomulised%20kasvajad/PKinfo_en.htm).
 
 <br>
 
 ```{r,echo=FALSE, fig.cap="Screen caption from dataset download page. Note that data was downloaded in JSON format.", out.width=600}
-knitr::include_graphics("img/pk30-page.png")
+knitr::include_graphics("img/pk10-page.png")
 ```
 
 <br>
@@ -89,7 +89,8 @@ Detailed instructions can be found [here](https://rstats-tartu.github.io/creater
 ## Download cancer incidence dataset from GitHub
 Download "cancer_incidence_PK30.json" file from "rstats-tartu/datasets" GitHub repo: 
 ```{r, eval=FALSE}
-url <- "https://raw.githubusercontent.com/rstats-tartu/datasets/master/cancer_incidence_PK30.json"
+url <- "https://raw.githubusercontent.com/rstats-tartu/datasets/master/cancer_newcases_PK10.json"
+## issues warning when dir exists
 dir.create("data")
 download.file(url, "data/cancer_incidence_PK30.json")
 ```
@@ -99,11 +100,13 @@ download.file(url, "data/cancer_incidence_PK30.json")
 
 ## Import and prepare data
 
-First we download "tidyverse" library. We are going to need also "stringi" and "stringr" libraries for string manipulation (you guess correctly, stringr is based on stringi):
+First we download "tidyverse" library. We are going to need also "stringi" and "stringr" libraries for string manipulation (you guess correctly, stringr is based on stringi).
+"broom" package converts S3 model object into dataframes for tidy handling.
 ```{r, message=FALSE}
 library(tidyverse)
 library(stringi)
 library(stringr)
+library(broom)
 ```
 
 
@@ -116,27 +119,28 @@ However, "boulder" package is still under development and you should use it care
 ```{r}
 # devtools::install_github("tpall/boulder")
 library(boulder)
-path <- "data/cancer_incidence_PK30.json"
+path <- "data/cancer_newcases_PK10.json"
 ## json_to_df warns when data is not from Estonian Health Board
-incidence <- json_to_df(path)
-incidence
+cases <- json_to_df(path)
+cases
 ```
 
-**Year, Site and Sex are factors.** 
-We convert Year to numeric and Site and Sex to character using `parse_` functions from "readr" package.
+**Year, `Specified site` and Sex are factors.** 
+We convert Year to numeric and "Specified site" and Sex to character using `parse_` functions from "readr" package.
 ```{r}
 ## Year to numeric
-incidence <- incidence %>% mutate_at("Year", parse_number)
+cases <- cases %>% mutate_at("Year", parse_number)
 ## Site and Sex to character
-incidence <- incidence %>% mutate_at(vars(Site, Sex), parse_character)
-incidence
+cases <- cases %>% mutate_at(vars(`Specified site`, Sex), parse_character)
+cases
 ```
 
 <br>
 
->We can see that cancer incidence data is available from years `r paste(range(incidence$Year), collapse = " to ")` for both sexes, `r sum(str_detect(colnames(incidence), "^[[:digit:]]"))` age groups and `r length(unique(incidence$Site))` different types of cancer sites ...
+>We can see that number of new cancer cases is available from years `r paste(range(cases$Year), collapse = " to ")` for both sexes, `r sum(str_detect(colnames(cases), "^[[:digit:]]"))` age groups and 
+`r length(unique(cases["Specified site"]))` different types of cancer sites ...
 
-**Hold on...** This table has data intermingled with summary data -- incidence of specific cancer types are next to total incidence -- , that's bad! 
+**Hold on...** This table has data intermingled with summary data -- cases of specific cancer types are next to total cases -- , that's bad! 
 
 ```
 Year  Site                              Sex
@@ -154,8 +158,8 @@ Year  Site                              Sex
 ```
 
 Summaries are provided for different range of **ICD10** codes e.g. "(C00-C97)" covers all types of cancer.
-We probably want to extract ICD10 codes to **identify and label summary data** so that we can decide later what we do with these rows. 
 
+We must keep this in mind when summarising data.
 
 Additionally, **we have three metadata columns** in dataset called "label", "source" and "updated".
 
@@ -168,52 +172,53 @@ Because these three seem to be constants in our table, we want to place them int
 
 ```{r}
 ## keep label and source in a separate variables
-label <- unique(incidence$label)
-data_source <- unique(incidence$source)
-updated <- unique(incidence$updated)
+label <- unique(cases$label)
+data_source <- unique(cases$source)
+updated <- unique(cases$updated)
 ```
 
 Table metadata shows that values are **`r tolower(label)`** and originate from **`r data_source`** and were last time updated in **`r format.Date(updated)`**.
 
-**Extract ICD10 codes**. 
-We use `extract_icd()` helper function from "boulder" package to extract ICD10 codes from Site variable.
-```{r}
-## Extract ICD10 codes and keep them in a separate dataframe
-icd10 <- mutate(incidence, 
-                icd10 = map(Site, extract_icd)) %>% 
-  select(Site, icd10)
-## Let's have a look, for reviewing the result we filter only short strings, note that icd10 is list column (list of character vectors)
-icd10 %>% filter(str_length(Site) < 30)
-```
+<!-- **Extract ICD10 codes**.  -->
+<!-- We use `extract_icd()` helper function from "boulder" package to extract ICD10 codes from Site variable. -->
+<!-- ```{r} -->
+<!-- ## Extract ICD10 codes and keep them in a separate dataframe -->
+<!-- icd10 <- mutate(cases,  -->
+<!--                 icd10 = map(`Specified site`, extract_icd)) %>%  -->
+<!--   select(`Specified site`, icd10) -->
+<!-- ## Let's have a look, for reviewing the result we filter only short strings, note that icd10 is list column (list of character vectors) -->
+<!-- icd10 %>% filter(str_length(`Specified site`) < 30) -->
+<!-- ``` -->
 
 
-While we are on this, we also want to trim those offending dots from beginning of names. 
+We also want to trim those offending dots from beginning of "Specified site" names and rename "Specified site" into something more convenient, like "Site". 
+
 We use `stri_trim_left()` from "stringi" to trim all characters from the beginning of strings **until first alphabetic character** (`?regex`).
-To exclude table metadata constants, we use `select()` from "dplyr". 
+Finally, to exclude table metadata constants, we use `select()` from "dplyr". 
 ```{r}
-## trim characters until first [[:alpha:]], we keep also original Site values in Site_old and remove constant columns from table
-incidence <- mutate(incidence, 
-                    Site_old = Site,
-                    Site = stri_trim_left(Site, "[[:alpha:]]")) %>% 
+## trim characters until first [[:alpha:]], we keep also original `Specified site` values in Site_old, rename `Specified site` to Site and remove constant columns from table
+cases <- mutate(cases, 
+                    Site_old = `Specified site`,
+                    Site = stri_trim_left(`Specified site`, "[[:alpha:]]")) %>% 
   select(-label, -source, -updated)
 ## for reviewing the result we filter only short strings
-incidence %>% 
+cases %>% 
   select(Site_old, Site) %>% 
   filter(str_length(Site_old) < 20)
 ```
 
->Table is in the wide format, we want to convert it into long/tidy format and filter out missing data.
 
+>Table is in the wide format, we want to convert it into long/tidy format and filter out missing data.
 
 **Reshape data**.
 Values are in the age group columns.
-We try to reshape table such as the age groups go into "age" column and values will be in the column called "incidence".
-We use `gather()` from "tidyr" library to bring age group values into one column and incidence values into the other.
+We try to reshape table such as the age groups go into "age" column and values will be in the column called "cases".
+We use `gather()` from "tidyr" library to bring age group values into one column and cases values into the other.
 Here we also need to supply the names of the value columns, otherwise `gather()` will put all categorical variables into the key column and all numeric values into value column.
 
 ```{r}
 ## Let's look what happens when we run gather on our data
-gather(incidence)
+gather(cases)
 ```
 Not what we want!
 
@@ -222,7 +227,7 @@ Not what we want!
 
 
 **Select columns cleverly**.
-Incidence data is in the age groups columns are labelled from `0-4` to `85 and older`, we need to supply the names of these columns to `gather()`.
+cases data is in the age groups columns are labelled from `0-4` to `85 and older`, we need to supply the names of these columns to `gather()`.
 
 
 We can do this by supplying the names of all 18 age group columns to function (risking with typos and we need to backquote these names because of dash characters) or we can **do this in the smart way**.
@@ -236,18 +241,20 @@ One such function is `matches()`: matches a regular expression (`?regex`).
 Here we need to match columns with numbers in their names.
 Regular expression matching zero or more numbers is `"[[:digit:]]+"`.
 
+Let's run test first using character vector of column names:
 ```{r}
-colnames(incidence)
-colnames(incidence) %>% matches("[[:digit:]]+", vars = .)
+colnames(cases)
+colnames(cases) %>% matches("[[:digit:]]+", vars = .)
 ```
 
+We can see that "[[:digit:]]+" matches columns 4 to 21. Seems like it works!
 
-Here we use `gather()` to collect age group columns selected by `matches("[[:digit:]]+")` into columns "age" and "incidence".
+Here we use `gather()` to collect age group columns selected by `matches("[[:digit:]]+")` into columns "age" and "cases".
 ```{r}
 ## Values are in the age group columns
-incidence_long <- gather(data = incidence, 
+cases_long <- gather(data = cases, 
                          key = "age", 
-                         value = "incidence", 
+                         value = "cases", 
                          matches("[[:digit:]]+"))
 ```
 
@@ -255,20 +262,98 @@ Now we have each value on separate row and can filter out missing values. Curren
 Function `complete.cases()` gives logical vector indicating rows with no missing values (no NA-s).
 Based on this logical vector, `filter()` then keeps only `TRUE` rows.
 ```{r, echo=FALSE}
-beforefilter <- nrow(incidence_long)
+beforefilter <- nrow(cases_long)
 ```
 
 
 ```{r}
 ## Filter out missing data,
-incidence_long <- incidence_long %>% 
+cases_long <- cases_long %>% 
   filter(complete.cases(.))
 ## above is same as:
-## filter(incidence_long, complete.cases(incidence_long))
+## filter(cases_long, complete.cases(cases_long))
 ```
 
-Before filtering missing values table had `r beforefilter` rows and after `r nrow(incidence_long)`. 
+Before filtering missing values table had `r beforefilter` rows and after `r nrow(cases_long)`. 
 **Wow, looks that we don't have NA-s in our table!**
+
+## Cancer trend in Estonia
+
+It's simple, we have already summary data available in our table variable called "All malignant neoplasms (C00-C97)" in Site column.
+We plot this variable versus Years and for begginning we lump together men and women:.
+
+```{r}
+total_cases_per_year <- cases_long %>% 
+  filter(Site == "All malignant neoplasms (C00-C97)") %>% 
+  group_by(Year) %>% 
+  summarise(total_cases = sum(cases)) 
+## we disect plot to an object, then we can reuse it
+p <- total_cases_per_year %>% 
+  ggplot(aes(Year, total_cases)) +
+  geom_point() +
+  geom_line() +
+  ylab(str_wrap(label, width = 40)) +
+  ggtitle("All malignant neoplasms (C00-C97)",
+          subtitle = paste("Source:", data_source))
+p
+```
+
+
+```{r, echo=FALSE}
+cases_range <- range(total_cases_per_year$total_cases)
+cases_range
+sprintf("%1.0f%%", round(diff(cases_range)/cases_range[1], 2)*100)
+```
+
+We can see that the number of new cases has increased `r sprintf("%1.0f%%", round(diff(cases_range)/cases_range[1], 2)*100)` since year 2000, from `r paste(range(total_cases_per_year$total_cases), collapse = " to ")`.
+
+
+Is the number of cases similar in males and females?
+Again, we look on the all cancers, but also group by Sex:
+
+```{r}
+total_cases_per_year_sex <- cases_long %>% 
+  filter(Site == "All malignant neoplasms (C00-C97)") %>% 
+  group_by(Year, Sex) %>% 
+  summarise(total_cases = sum(cases)) 
+## we give new data to plot and we also must supply aes for Sex
+p %+% total_cases_per_year_sex + aes(color = Sex)
+```
+
+We can see that cancer prevalence is similar in both gender.
+
+
+**How big is the increase per year**, although we have count data and perhaps should use Poisson model. 
+However, as the mean gets further away from zero even as low as 10, the Poisson distribution looks like a normal distribution. 
+It becomes symmetric with it a mode at the mean.
+So we can safely fit normal linear model, parameter estimates will be similar to Poisson.
+
+```{r}
+mod1 <- lm(total_cases ~ Year, total_cases_per_year)
+## tidy is from broom package
+tidy(mod1)
+```
+
+We can see that number of new cancer cases has increased by `r round(tidy(mod1)$estimate[2])` each year during this period. 
+NB! intercept term does not make sense in this case.
+
+
+So we have seen `r round(tidy(mod1)$estimate[2])` more new cases each year during 2000 and 2014. 
+Do we have more cancer or does this reflects increase in population size?
+
+To answer this question, we need population size normalised values of cancer cases -- **incidence**.
+Cancer incidence is obtained by dividing cancer prevalence with population size.
+
+
+```{r}
+
+```
+
+
+
+
+
+
 
 
 
