--- a/index.Rmd
+++ b/index.Rmd
@@ -387,8 +387,8 @@ total_incidence_year_sex <- incidence_year_sex %>%
 p %+% total_incidence_year_sex + aes(y = incidence, color = Sex)
 ```
 
-Is increasing incidence trend comparable to the increase in number of cases? We calculate percent increase in 2014 compared to 2000. It's impressive...
-
+Is increasing incidence trend comparable to the increase in number of cases? 
+We can try to look at this by calculating percent increase in 2014 compared to 2000.
 Do we get more cancer or do we diagnose more cancer... ?
 ```{r, echo=FALSE}
 incidence_range <- total_incidence_year_sex %>% 
@@ -399,6 +399,10 @@ incidence_range <- total_incidence_year_sex %>%
 knitr::kable(incidence_range)
 ```
 
-We can see that men have shown even bigger increase in cancer rates than women in Estonia.
+We can see that compared to counts both men and women show even bigger increase in cancer rates in Estonia. 
+
+>We can settle that cancer trend in Estonia is worryingly increasing.
+
+
 
 ## References
